objects/FSL_Stage_Asset__c.object
<CustomObject>
    <description>This object is created for staging the Asset data from Siebel and ERPs before processing it into Asset object</description>
    <fields>
        <fullName>Access_Code__c</fullName>
        <description>This will be displayed based on Family Code + Manufacturer + Model</description>
        <label>Access Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line1__c</fullName>
        <label>Address Line1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Automotive_Application_Flag__c</fullName>
        <description>Automotive Application Flag - This value will be needed for ODM</description>
        <label>Automotive Application Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BIS_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>BIS Flag</description>
        <label>BIS Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Build_Date__c</fullName>
        <description>This is the build date for the engine</description>
        <label>Build Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cash_Customer_Flag__c</fullName>
        <label>Cash Customer Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <label>Contact Name</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Critical_Part_List_Number__c</fullName>
        <description>Critical Part List Number</description>
        <label>Critical Part List Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Address_1__c</fullName>
        <label>Customer Address 1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Address_2__c</fullName>
        <label>Customer Address 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Address_3__c</fullName>
        <label>Customer Address 3</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Code__c</fullName>
        <label>Customer Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <description>Customer Name</description>
        <label>Customer Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Design_Phase_Code__c</fullName>
        <description>Design Phase Code</description>
        <label>Design Phase Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ETO_Conversion_Date__c</fullName>
        <description>Engine Trade Out Conversion Date</description>
        <label>ETO Conversion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ETO_Old_PSN__c</fullName>
        <description>Engine Trade Out Old PSN</description>
        <label>ETO-Old PSN</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_ID__c</fullName>
        <label>Email ID</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Engine_Application_Code__c</fullName>
        <description>Product Application Code</description>
        <label>Engine Application Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engine_Application_Description__c</fullName>
        <description>Engine Application Description/Name - Product Application Description</description>
        <label>Engine Application Description</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Engine_Bill_To_Code__c</fullName>
        <description>Engine Bill-To Code</description>
        <label>Engine Bill-To Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engine_Family_Code__c</fullName>
        <description>Product Family Code</description>
        <label>Engine Family Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engine_Family_Name__c</fullName>
        <description>Product Family Name</description>
        <label>Engine Family Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engine_Manufacturer__c</fullName>
        <label>Engine Manufacturer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FAIRBANKS MORSE ENGINES</fullName>
                </value>
                <value>
                    <fullName>HYUNDAI</fullName>
                </value>
                <value>
                    <fullName>VOLVO-WHITE CORPORATION</fullName>
                </value>
                <value>
                    <fullName>VALMET CORPORATION</fullName>
                </value>
                <value>
                    <fullName>ELECTORMOTIVE</fullName>
                </value>
                <value>
                    <fullName>COOPER BESSEMER</fullName>
                </value>
                <value>
                    <fullName>SILVERTON MARINE</fullName>
                </value>
                <value>
                    <fullName>CHEVROLET DIVISION</fullName>
                </value>
                <value>
                    <fullName>MAN B&amp;W DIESEL AG</fullName>
                </value>
                <value>
                    <fullName>GENERAL MOTORS CORP.</fullName>
                </value>
                <value>
                    <fullName>RENAULT MOTEURS</fullName>
                </value>
                <value>
                    <fullName>CROSSLEY</fullName>
                </value>
                <value>
                    <fullName>NEW FLYER</fullName>
                </value>
                <value>
                    <fullName>GENERAC</fullName>
                </value>
                <value>
                    <fullName>WAUKESHA ENGINE, DRESSER</fullName>
                </value>
                <value>
                    <fullName>LINAMAR</fullName>
                </value>
                <value>
                    <fullName>DETROIT DIESEL CORP.</fullName>
                </value>
                <value>
                    <fullName>J. I. CASE CORP.</fullName>
                </value>
                <value>
                    <fullName>MACK</fullName>
                </value>
                <value>
                    <fullName>JENBECHER</fullName>
                </value>
                <value>
                    <fullName>ADIM DIESEL</fullName>
                </value>
                <value>
                    <fullName>LIEBHERR</fullName>
                </value>
                <value>
                    <fullName>AJAX</fullName>
                </value>
                <value>
                    <fullName>WARTSILA DIESEL AB</fullName>
                </value>
                <value>
                    <fullName>ONAN CORP.</fullName>
                </value>
                <value>
                    <fullName>ALCO POWER</fullName>
                </value>
                <value>
                    <fullName>CUMMINS</fullName>
                </value>
                <value>
                    <fullName>WARTSILA WICHMANN DIESEL</fullName>
                </value>
                <value>
                    <fullName>DEUTZ MWM</fullName>
                </value>
                <value>
                    <fullName>TOYOTA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Equipment_Configuration__c</fullName>
        <description>Equipment Configuration for the Equipment Id</description>
        <label>Equipment Configuration</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equipment_Id__c</fullName>
        <description>Equipment Code - This will be displayed based on Family Code + Manufacturer + Model</description>
        <label>Equipment Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Description__c</fullName>
        <label>Error Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Family_Code_Make_Model__c</fullName>
        <formula>Engine_Family_Code__c + Manufacturer__c + Model__c</formula>
        <label>Family Code Make Model</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Individual__c</fullName>
        <externalId>true</externalId>
        <label>Individual Item Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manufacturer__c</fullName>
        <description>Manufacturer / Make - This will be based on Family Code received</description>
        <label>Manufacturer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marine_Application_Flag__c</fullName>
        <description>Marine Application Flag - This value will be needed for ODM</description>
        <label>Marine Application Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <description>Model Series - This will be displayed based on Family Code + Manufacturer selected</description>
        <label>Model</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MoveX_Contact_ID__c</fullName>
        <description>To store MoveX Contact ID associated to the Asset</description>
        <externalId>true</externalId>
        <label>Contact ID</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MoveX_Site_ID__c</fullName>
        <description>To store MoveX Site ID associated to the Asset</description>
        <externalId>true</externalId>
        <label>Site ID</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Warranty__c</fullName>
        <defaultValue>false</defaultValue>
        <description>No Warranty Indication Flag</description>
        <label>No Warranty</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OEM_SP_Code__c</fullName>
        <description>OEM/SP Code</description>
        <label>OEM/SP Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Name__c</fullName>
        <label>Owner Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paccar_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Paccar Flag</description>
        <label>Paccar Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Processing_Status__c</fullName>
        <description>Processing Status of the Record</description>
        <label>Processing Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>In Error</fullName>
                </value>
                <value>
                    <fullName>Processed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Application_Code__c</fullName>
        <description>Marketing Application Code</description>
        <label>Product Application Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Application_Description__c</fullName>
        <description>Marketing Application Description</description>
        <label>Product Application Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recon_Engine_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Recon Engine Flag</description>
        <label>Recon Engine Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Registration__c</fullName>
        <label>Registration</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Segment__c</fullName>
        <label>Sales Segment</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Model_Name__c</fullName>
        <label>Service Model Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_Date__c</fullName>
        <description>Ship Date of the Asset</description>
        <label>Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>Source System of the Data</description>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>BMS</fullName>
                </value>
                <value>
                    <fullName>MOVEX</fullName>
                </value>
                <value>
                    <fullName>MOVEX-175</fullName>
                </value>
                <value>
                    <fullName>MOVEX-190</fullName>
                </value>
                <value>
                    <fullName>MOVEX-200</fullName>
                </value>
                <value>
                    <fullName>MOVEX-250</fullName>
                </value>
                <value>
                    <fullName>MOVEX-270</fullName>
                </value>
                <value>
                    <fullName>MOVEX-CDK</fullName>
                </value>
                <value>
                    <fullName>MOVEX-CSP</fullName>
                </value>
                <value>
                    <fullName>MOVEX-MYD</fullName>
                </value>
                <value>
                    <fullName>MOVEX-UK</fullName>
                </value>
                <value>
                    <fullName>Siebel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_PSN_IIN__c</fullName>
        <formula>IF((Engine_Family_Name__c = &apos;BB&apos; || Service_Model_Name__c = &apos;NON CUMMINS&apos; || Service_Model_Name__c = &apos;NONCUMMINS&apos;) &amp;&amp; NOT(ISBLANK(Individual__c)), 
  TEXT(Type__c) + &apos;-&apos; + Individual__c, 
  IF((Engine_Family_Name__c = &apos;99&apos; || Service_Model_Name__c = &apos;NON CUMMINS&apos; || Service_Model_Name__c = &apos;NONCUMMINS&apos;), 
    TEXT(Type__c) + &apos;-&apos; + Customer_Code__c + &apos;-&apos; + Unit_Number__c, 
    IF(TEXT(Type__c) = &apos;ENGINE&apos; || TEXT(Type__c) = &apos;GENSET&apos;, 
      &apos;Engines-&apos; + Name, 
      IF(TEXT(Type__c) = &apos;FIREPUMP&apos; || TEXT(Type__c) = &apos;ENGINE CORE&apos; || TEXT(Type__c) = &apos;SWITCH GEAR&apos; || 
         TEXT(Type__c) = &apos;TRANSFER SWITCH&apos; || TEXT(Type__c) = &apos;TRANSMISSIONS&apos; || TEXT(Type__c) = &apos;BATTERY&apos; || 
         TEXT(Type__c) = &apos;PARSYS&apos; || TEXT(Type__c) = &apos;MARINE GEAR&apos;, 
        &apos;Products-&apos; + Name, 
        TEXT(Type__c) + &apos;-&apos; + Name
      )
    )
  )
)</formula>
        <label>Type-PSN/IIN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_PSN__c</fullName>
        <externalId>true</externalId>
        <label>Type-PSN</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type - Engines or Products</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Engines</fullName>
                </value>
                <value>
                    <fullName>Products</fullName>
                </value>
                <value>
                    <fullName>ENGINE</fullName>
                </value>
                <value>
                    <fullName>FIREPUMP</fullName>
                </value>
                <value>
                    <fullName>GENSET</fullName>
                </value>
                <value>
                    <fullName>ENGINE CORE</fullName>
                </value>
                <value>
                    <fullName>SWITCH GEAR</fullName>
                </value>
                <value>
                    <fullName>TRANSFER SWITCH</fullName>
                </value>
                <value>
                    <fullName>TRANSMISSIONS</fullName>
                </value>
                <value>
                    <fullName>BATTERY</fullName>
                </value>
                <value>
                    <fullName>PARSYS</fullName>
                </value>
                <value>
                    <fullName>MARINE GEAR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit_Number__c</fullName>
        <label>Unit Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Type__c</fullName>
        <label>Unit Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VIN__c</fullName>
        <description>VIN</description>
        <label>VIN</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warranty_Start_Date__c</fullName>
        <description>Warranty Start Date of the Asset</description>
        <label>Warranty Start Date</label>
        <type>Date</type>
    </fields>
    <label>FSL Stage Asset</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Processing_Status__c</columns>
        <columns>Service_Model_Name__c</columns>
        <columns>Type__c</columns>
        <columns>Type_PSN__c</columns>
        <columns>Model__c</columns>
        <columns>Manufacturer__c</columns>
        <columns>Source__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>ENGINE</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>PSN</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FSL Stage Assets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>